--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "scripts": {
     "compile": "babel addAssetHtmlPlugin.js -o index.js",
     "lint": "standard",
-    "prepublish": "not-in-install && npm run compile || echo this is npm install",
+    "prepublish": "not-in-install && npm run compile || in-install",
+    "postpublish": "git push --follow-tags",
     "test": "npm run lint"
   },
   "repository": "SimenB/add-asset-html-webpack-plugin",
@@ -23,11 +24,14 @@
     "url": "https://github.com/SimenB/add-asset-html-webpack-plugin/issues"
   },
   "homepage": "https://github.com/SimenB/add-asset-html-webpack-plugin#readme",
-  "dependencies": {},
+  "dependencies": {
+    "bluebird": "^3.3.5"
+  },
   "devDependencies": {
     "babel-cli": "^6.9.0",
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-preset-es2015": "^6.9.0",
+    "html-webpack-plugin": "^2.10.0",
     "in-publish": "^2.0.0",
     "standard": "^7.1.1"
   },
