--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.4.0",
   "description": "Add a JS or CSS assets to a generated HTML file",
   "files": [
-    "index.js"
+    "index.js",
+    "index.d.ts"
   ],
   "scripts": {
     "compile": "babel addAssetHtmlPlugin.js -o index.js",
