--- a/package.json
+++ b/package.json
@@ -3,12 +3,13 @@
   "version": "1.0.0",
   "description": "Add a JS or CSS assets to a generated HTML file",
   "files": [
-    "index.js",
+    "lib/",
     "index.d.ts"
   ],
+  "main": "lib/index.js",
   "scripts": {
-    "clean": "del index.js coverage/ .nyc_output/",
-    "compile": "babel addAssetHtmlPlugin.js -o index.js",
+    "clean": "del lib/ coverage/ .nyc_output/",
+    "compile": "babel src/ --out-dir lib/",
     "cover": "nyc ava",
     "lint": "node-version-gte-4 && eslint . || node-version-lt-4",
     "prepublish": "not-in-install && npm run compile || in-install",
