--- a/.travis.yml
+++ b/.travis.yml
@@ -14,3 +14,7 @@ script: npm run travis
 after_success:
   - npm install -g codecov
   - codecov
+cache:
+  npm: true
+  directories:
+  - node_modules
