--- a/appveyor.yml
+++ b/appveyor.yml
@@ -3,17 +3,15 @@ init:
 
 environment:
   matrix:
-  - nodejs_version: "0.10"
-  - nodejs_version: "0.12"
   - nodejs_version: 4
-  - nodejs_version: 5
   - nodejs_version: 6
+  - nodejs_version: 7
 
 # Install scripts. (runs after repo cloning)
 install:
   - ps: Install-Product node $env:nodejs_version x64
   - ps: >-
-      if ($env:nodejs_version -eq "0.10" -or $env:nodejs_version -eq "0.12" -or $env:nodejs_version -eq "4") {
+      if ($env:nodejs_version -eq "4") {
         npm -g install npm@3
         $env:PATH="$env:APPDATA\npm;$env:PATH"
       }
