--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "clean": "del lib/ coverage/ .nyc_output/",
     "compile": "babel src/ --out-dir lib/",
     "cover": "nyc ava",
-    "lint": "node-version-gte-4 && eslint . || node-version-lt-4",
+    "lint": "eslint .",
     "prepublish": "not-in-install && npm run compile || in-install",
     "postpublish": "git push --follow-tags",
     "pretest": "npm run lint",
@@ -33,22 +33,21 @@
   },
   "homepage": "https://github.com/SimenB/add-asset-html-webpack-plugin#readme",
   "dependencies": {
-    "bluebird": "^3.3.5"
+    "bluebird": "^3.4.6"
   },
   "devDependencies": {
     "ava": "^0.16.0",
-    "babel-cli": "^6.16.0",
+    "babel-cli": "^6.18.0",
     "babel-plugin-add-module-exports": "^0.2.1",
-    "babel-preset-es2015": "^6.16.0",
-    "babel-register": "^6.16.3",
+    "babel-preset-es2015": "^6.18.0",
+    "babel-register": "^6.18.0",
     "del-cli": "^0.2.0",
-    "eslint": "^3.8.0",
-    "eslint-config-simenb-ava": "^5.0.3",
-    "eslint-config-simenb-base": "^7.0.1",
+    "eslint": "^3.9.1",
+    "eslint-config-simenb-ava": "^6.0.0",
+    "eslint-config-simenb-base": "^8.0.0",
     "html-webpack-plugin": "^2.10.0",
     "in-publish": "^2.0.0",
-    "node-version-check": "^2.1.1",
-    "nyc": "^8.3.1",
+    "nyc": "^8.4.0",
     "sinon": "^1.17.6"
   },
   "peerDependencies": {
