--- a/package.json
+++ b/package.json
@@ -53,6 +53,9 @@
   "peerDependencies": {
     "html-webpack-plugin": "^2.10.0"
   },
+  "engines": {
+    "node": ">=4"
+  },
   "ava": {
     "require": [
       "babel-register"
