--- a/.travis.yml
+++ b/.travis.yml
@@ -7,8 +7,9 @@ os:
   - linux
   - osx
 osx_image: xcode7.3
-before_install: if [[ `npm -v` != 3* ]]; then npm i -g npm@3; fi
-script: npm run travis
+before_install: npm i -g yarn
+install: yarn install
+script: yarn run travis
 after_success:
   - npm install -g codecov
   - codecov
