--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "ava": "^0.17.0",
     "babel-cli": "^6.18.0",
     "babel-plugin-add-module-exports": "^0.2.1",
-    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-es2015-node4": "^2.1.0",
     "babel-register": "^6.18.0",
     "del-cli": "^0.2.0",
     "eslint": "^3.9.1",
