Fix lint on clean repo

--- a/example/.eslintrc
+++ b/example/.eslintrc
@@ -3,6 +3,8 @@
     "node": true
   },
   "rules": {
-    "import/no-extraneous-dependencies": ["error", { "devDependencies": true }]
+    "import/no-extraneous-dependencies": ["error", { "devDependencies": true }],
+    // Off becuase stuff is generated later
+    "import/no-unresolved": "off"
   }
 }
