--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "preexample": "npm run clean && npm run compile",
     "example": "webpack --config example/webpack.config.dll.js && webpack --config example/webpack.config.js",
     "lint": "eslint .",
-    "prepublish": "not-in-install && npm run compile || in-install",
+    "update-license": "licensor --width 72",
+    "compile-and-update-license": "npm run compile && update-license",
+    "preversion": "npm run update-license",
+    "prepublish": "not-in-install && npm run compile-and-update-license || in-install",
     "postpublish": "git push --follow-tags",
     "pretest": "npm run lint",
     "test": "jest",
@@ -50,6 +53,7 @@
     "html-webpack-plugin": "^2.10.0",
     "in-publish": "^2.0.0",
     "jest": "^18.0.0",
+    "licensor": "^3.1.0",
     "nyc": "^10.0.0",
     "power-assert": "^1.4.2",
     "sinon": "^1.17.6",
