--- a/package.json
+++ b/package.json
@@ -47,11 +47,12 @@
     "classnames": "^2.2.5",
     "del-cli": "^0.2.0",
     "eslint": "^3.16.1",
-    "eslint-config-simenb-base": "^10.0.0",
+    "eslint-config-simenb-base": "^11.0.1",
     "html-webpack-plugin": "^2.10.0",
     "in-publish": "^2.0.0",
     "jest": "^19.0.0",
     "licensor": "^3.1.0",
+    "prettier": "^0.21.0",
     "webpack": "^2.2.1"
   },
   "peerDependencies": {
