--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "del-cli": "^0.2.0",
     "eslint": "^3.19.0",
     "eslint-config-simenb-base": "^12.1.3",
+    "eslint_d": "^4.2.5",
     "html-webpack-plugin": "^2.10.0",
     "in-publish": "^2.0.0",
     "jest": "^19.0.0",
