--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,17 @@
 {
   "presets": [
-    "es2015-node4"
+    ["env", {
+      "targets": {
+        "node": 4
+      },
+      "exclude": [
+        "transform-regenerator",
+        // These are not _really_ needed for node@4
+        "transform-es2015-classes",
+        "transform-es2015-block-scoping",
+        "transform-es2015-arrow-functions"
+      ]
+    }]
   ],
   "plugins": [
     ["transform-async-to-module-method", {
