--- a/package.json
+++ b/package.json
@@ -8,11 +8,11 @@
   ],
   "main": "lib/index.js",
   "scripts": {
-    "clean": "del lib/ coverage/ example/build example/dist",
+    "clean": "rm -rf lib/ coverage/ example/build example/dist",
     "compile": "babel src/ --out-dir lib/",
     "cover": "jest --coverage",
     "preexample": "npm run clean && npm run compile",
-    "example": "webpack --config example/webpack.config.dll.js && webpack --config example/webpack.config.js",
+    "example": "webpack --config example/webpack.config.dll.js && webpack --config example/webpack.config.ov1.js && webpack --config example/webpack.config.js",
     "lint": "eslint .",
     "update-license": "licensor --width 72",
     "compile-and-update-license": "npm run compile && npm run update-license",
@@ -43,17 +43,16 @@
     "babel-cli": "^6.18.0",
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-plugin-transform-async-to-module-method": "^6.16.0",
-    "babel-preset-env": "^1.4.0",
+    "babel-preset-es2015-node4": "^2.1.0",
     "classnames": "^2.2.5",
     "del-cli": "^0.2.0",
-    "eslint": "^3.19.0",
-    "eslint-config-simenb-base": "^12.1.3",
-    "eslint_d": "^4.2.5",
+    "eslint": "^3.16.1",
+    "eslint-config-simenb-base": "^12.0.0",
     "html-webpack-plugin": "^2.10.0",
     "in-publish": "^2.0.0",
     "jest": "^19.0.0",
     "licensor": "^3.1.0",
-    "prettier": "^1.1.0",
+    "prettier": "^1.0.1",
     "webpack": "^2.2.1"
   },
   "peerDependencies": {
