--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "pretest": "npm run lint",
     "test": "jest",
     "pretravis": "npm run lint && npm run clean",
-    "travis": "npm run cover"
+    "travis": "npm run cover",
+    "precommit": "lint-staged"
   },
   "repository": "SimenB/add-asset-html-webpack-plugin",
   "keywords": [
@@ -50,9 +51,11 @@
     "eslint-config-simenb-base": "^12.1.3",
     "eslint_d": "^4.2.5",
     "html-webpack-plugin": "^2.10.0",
+    "husky": "^0.13.3",
     "in-publish": "^2.0.0",
     "jest": "^19.0.0",
     "licensor": "^3.1.0",
+    "lint-staged": "^3.4.0",
     "prettier": "^1.1.0",
     "webpack": "^2.2.1"
   },
@@ -72,5 +75,11 @@
         "statements": 100
       }
     }
+  },
+  "lint-staged": {
+    "*.js": [
+      "eslint_d --fix",
+      "git add"
+    ]
   }
 }
