--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   ],
   "main": "lib/index.js",
   "scripts": {
-    "clean": "del lib/ coverage/ example/build example/dist",
+    "clean": "del-cli lib/ coverage/ example/build example/dist",
     "compile": "babel src/ --out-dir lib/",
     "cover": "jest --coverage",
     "preexample": "npm run clean && npm run compile",
