--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,7 @@
 {
   "presets": [
     ["env", {
+      "modules": false,
       "targets": {
         "node": 4
       },
@@ -18,6 +19,7 @@
       "module": "bluebird",
       "method": "coroutine"
     }],
-    "add-module-exports"
+    "add-module-exports",
+    "transform-inline-imports-commonjs"
   ]
 }
