--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "babel-cli": "^6.18.0",
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-plugin-transform-async-to-module-method": "^6.16.0",
+    "babel-plugin-transform-inline-imports-commonjs": "^1.2.0",
     "babel-preset-env": "^1.4.0",
     "classnames": "^2.2.5",
     "del-cli": "^0.2.0",
