--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "lint": "eslint .",
     "update-license": "licensor --width 72",
     "compile-and-update-license": "npm run compile && npm run update-license",
-    "preversion": "npm run update-license",
+    "preversion": "npm run travis && npm run update-license",
     "prepublish": "not-in-install && npm run compile-and-update-license || in-install",
     "postpublish": "git push --follow-tags",
     "pretest": "npm run lint",
