--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
   "homepage": "https://github.com/SimenB/add-asset-html-webpack-plugin#readme",
   "dependencies": {
     "bluebird": "^3.4.6",
-    "minimatch": "^3.0.3"
+    "minimatch": "^3.0.3",
+    "globby": "^6.1.0"
   },
   "devDependencies": {
     "babel-cli": "^6.18.0",
