--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
   "homepage": "https://github.com/SimenB/add-asset-html-webpack-plugin#readme",
   "dependencies": {
     "globby": "^6.1.0",
-    "minimatch": "^3.0.4",
+    "micromatch": "^3.1.3",
     "p-each-series": "^1.0.0"
   },
   "devDependencies": {
