Use prettier on md and json

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,10 +1,15 @@
 {
   "root": true,
   "extends": "simenb-base",
-  "overrides": [{
-    "files": "test.js",
-    "env": {
-      "jest": true
+  "overrides": [
+    {
+      "files": "test.js",
+      "env": {
+        "jest": true
+      }
     }
-  }]
+  ],
+  "rules": {
+    "prettier/prettier": ["error", { "trailingComma": "all" }]
+  }
 }
