chore: upgrade to jest 23 and babel 7
BREAKING CHANGE: Drops support for node 4

--- a/.babelrc
+++ b/.babelrc
@@ -1,22 +1,17 @@
 {
   "presets": [
-    ["env", {
-      "modules": false,
-      "targets": {
-        "node": 4
-      },
-      "exclude": [
-        "transform-regenerator",
-        // These are not _really_ needed for node@4
-        "transform-es2015-classes",
-        "transform-es2015-block-scoping",
-        "transform-es2015-arrow-functions"
-      ]
-    }]
+    [
+      "@babel/preset-env",
+      {
+        "modules": false,
+        "targets": {
+          "node": 6
+        }
+      }
+    ]
   ],
   "plugins": [
     "add-module-exports",
-    "transform-inline-imports-commonjs"
-  ],
-  "retainLines": true
+    ["@babel/plugin-transform-modules-commonjs", { "lazy": true }]
+  ]
 }
