--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
     "eslint": "^5.6.0",
     "eslint-config-simenb-base": "^15.0.0",
     "eslint_d": "^7.1.0",
-    "html-webpack-plugin": "^2.10.0",
+    "html-webpack-plugin": "^3.0.4",
     "husky": "^0.14.3",
     "in-publish": "^2.0.0",
     "jest": "^23.6.0",
@@ -63,10 +63,11 @@
     "licensor": "^4.0.0",
     "lint-staged": "^7.0.0",
     "prettier": "^1.8.2",
-    "webpack": "^3.5.6"
+    "webpack": "^4.0.0",
+    "webpack-cli": "^3.1.0"
   },
   "peerDependencies": {
-    "html-webpack-plugin": "^2.10.0 || ^3.0.4"
+    "html-webpack-plugin": "^3.0.4"
   },
   "engines": {
     "node": ">=6"
