--- a/package.json
+++ b/package.json
@@ -54,7 +54,8 @@
     "licensor": "^4.0.0",
     "lint-staged": "^7.0.0",
     "prettier": "^1.8.2",
-    "webpack": "^4.0.0"
+    "webpack": "^4.0.0",
+    "webpack-cli": "^2.0.10"
   },
   "peerDependencies": {
     "html-webpack-plugin": "^3.0.4"
