--- a/package.json
+++ b/package.json
@@ -2,21 +2,22 @@
   "name": "add-asset-html-webpack-plugin",
   "version": "3.0.0-0",
   "description": "Add a JS or CSS assets to a generated HTML file",
-  "files": ["lib/", "index.d.ts"],
+  "files": [
+    "lib/",
+    "index.d.ts"
+  ],
   "main": "lib/index.js",
   "scripts": {
     "clean": "del-cli lib/ coverage/ example/build example/dist",
-    "compile": "babel src/ --out-dir lib/",
+    "build": "babel src/ --out-dir lib/",
     "cover": "jest --coverage",
-    "preexample": "npm run clean && npm run compile",
-    "example":
-      "webpack --config example/webpack.config.dll.js && webpack --config example/webpack.config.js",
+    "preexample": "npm run clean && npm run build",
+    "example": "webpack --config example/webpack.config.dll.js && webpack --config example/webpack.config.js",
     "lint": "eslint .",
     "update-license": "licensor --width 72",
-    "compile-and-update-license": "npm run compile && npm run update-license",
+    "build-and-update-license": "npm run build && npm run update-license",
     "preversion": "npm run travis && npm run update-license",
-    "prepublish":
-      "not-in-install && npm run compile-and-update-license || in-install",
+    "prepublish": "not-in-install && npm run build-and-update-license || in-install",
     "postpublish": "git push --follow-tags",
     "pretest": "npm run lint",
     "test": "jest",
@@ -25,7 +26,11 @@
     "precommit": "lint-staged"
   },
   "repository": "SimenB/add-asset-html-webpack-plugin",
-  "keywords": ["dll", "html-webpack-plugin", "webpack"],
+  "keywords": [
+    "dll",
+    "html-webpack-plugin",
+    "webpack"
+  ],
   "author": "Simen Bekkhus <sbekkhus91@gmail.com>",
   "license": "MIT",
   "bugs": {
@@ -38,24 +43,28 @@
     "p-each-series": "^1.0.0"
   },
   "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-plugin-add-module-exports": "^0.2.1",
-    "babel-plugin-transform-inline-imports-commonjs": "^1.2.0",
-    "babel-preset-env": "^1.6.0",
+    "@babel/cli": "^7.0.0",
+    "@babel/core": "^7.0.1",
+    "@babel/plugin-transform-modules-commonjs": "^7.0.0",
+    "@babel/preset-env": "^7.0.0",
+    "babel-core": "^7.0.0-bridge.0",
+    "babel-jest": "^23.6.0",
+    "babel-plugin-add-module-exports": "^1.0.0",
     "classnames": "^2.2.5",
     "del-cli": "^1.1.0",
-    "eslint": "^4.6.1",
-    "eslint-config-simenb-base": "^14.0.0",
-    "eslint_d": "^5.1.0",
+    "eslint": "^5.6.0",
+    "eslint-config-simenb-base": "^15.0.0",
+    "eslint_d": "^7.1.0",
     "html-webpack-plugin": "^3.0.4",
     "husky": "^0.14.3",
     "in-publish": "^2.0.0",
-    "jest": "^22.0.0",
+    "jest": "^23.6.0",
+    "jest-watch-typeahead": "^0.2.0",
     "licensor": "^4.0.0",
     "lint-staged": "^7.0.0",
     "prettier": "^1.8.2",
     "webpack": "^4.0.0",
-    "webpack-cli": "^2.0.10"
+    "webpack-cli": "^3.1.0"
   },
   "peerDependencies": {
     "html-webpack-plugin": "^3.0.4"
@@ -72,19 +81,35 @@
         "lines": 100,
         "statements": 100
       }
-    }
+    },
+    "watchPlugins": [
+      "jest-watch-typeahead/filename",
+      "jest-watch-typeahead/testname"
+    ]
   },
   "lint-staged": {
-    "*.js": ["eslint --fix", "git add"],
-    "*.{md,json}": ["prettier --write", "git add"],
-    ".eslintrc": ["prettier --write", "git add"]
+    "*.js": [
+      "eslint --fix",
+      "git add"
+    ],
+    "*.{md,json}": [
+      "prettier --write",
+      "git add"
+    ],
+    ".{eslintrc,babelrc}": [
+      "prettier --write",
+      "git add"
+    ]
   },
   "prettier": {
     "singleQuote": true,
     "trailingComma": "all",
     "overrides": [
       {
-        "files": ".eslintrc",
+        "files": [
+          ".eslintrc",
+          ".babelrc"
+        ],
         "options": {
           "parser": "json"
         }
