--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "licensor": "^4.0.0",
     "lint-staged": "^7.0.0",
     "prettier": "^1.8.2",
+    "slash": "^2.0.0",
     "webpack": "^4.0.0",
     "webpack-cli": "^3.1.0"
   },
@@ -92,7 +93,7 @@
       "eslint --fix",
       "git add"
     ],
-    "*.{md,json}": [
+    "*.{md,json,ts}": [
       "prettier --write",
       "git add"
     ],
@@ -104,6 +105,7 @@
   "prettier": {
     "singleQuote": true,
     "trailingComma": "all",
+    "proseWrap": "always",
     "overrides": [
       {
         "files": [
