--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "add-asset-html-webpack-plugin",
-  "version": "2.1.3",
+  "version": "0.0.0-development",
   "description": "Add a JS or CSS assets to a generated HTML file",
   "files": [
     "lib/",
@@ -23,7 +23,9 @@
     "test": "jest",
     "pretravis": "npm run lint && npm run clean",
     "travis": "npm run cover",
-    "precommit": "lint-staged"
+    "precommit": "lint-staged",
+    "travis-deploy-once": "travis-deploy-once",
+    "semantic-release": "semantic-release"
   },
   "repository": "SimenB/add-asset-html-webpack-plugin",
   "keywords": [
@@ -65,7 +67,9 @@
     "prettier": "^1.8.2",
     "slash": "^2.0.0",
     "webpack": "^4.0.0",
-    "webpack-cli": "^3.1.0"
+    "webpack-cli": "^3.1.0",
+    "travis-deploy-once": "^5.0.7",
+    "semantic-release": "^15.9.15"
   },
   "peerDependencies": {
     "html-webpack-plugin": "^3.0.4"
