--- a/package.json
+++ b/package.json
@@ -24,8 +24,7 @@
     "pretravis": "npm run lint && npm run clean",
     "travis": "npm run cover",
     "precommit": "lint-staged",
-    "travis-deploy-once": "travis-deploy-once",
-    "semantic-release": "semantic-release"
+    "travis-deploy-once": "travis-deploy-once"
   },
   "repository": "SimenB/add-asset-html-webpack-plugin",
   "keywords": [
@@ -68,8 +67,7 @@
     "slash": "^2.0.0",
     "webpack": "^4.0.0",
     "webpack-cli": "^3.1.0",
-    "travis-deploy-once": "^5.0.7",
-    "semantic-release": "^15.9.15"
+    "travis-deploy-once": "^5.0.7"
   },
   "peerDependencies": {
     "html-webpack-plugin": "^3.0.4"
