--- a/package.json
+++ b/package.json
@@ -23,8 +23,7 @@
     "test": "jest",
     "pretravis": "npm run lint && npm run clean",
     "travis": "npm run cover",
-    "precommit": "lint-staged",
-    "travis-deploy-once": "travis-deploy-once"
+    "precommit": "lint-staged"
   },
   "repository": "SimenB/add-asset-html-webpack-plugin",
   "keywords": [
@@ -66,8 +65,7 @@
     "prettier": "^1.8.2",
     "slash": "^2.0.0",
     "webpack": "^4.0.0",
-    "webpack-cli": "^3.1.0",
-    "travis-deploy-once": "^5.0.7"
+    "webpack-cli": "^3.1.0"
   },
   "peerDependencies": {
     "html-webpack-plugin": "^3.0.4"
