--- a/.travis.yml
+++ b/.travis.yml
@@ -7,14 +7,13 @@ os:
 - linux
 - osx
 osx_image: xcode7.3
-before_install: npm install --global greenkeeper-lockfile@1
+before_install: yarn global add greenkeeper-lockfile@1
 before_script: greenkeeper-lockfile-update
 script: yarn run travis
 after_script: greenkeeper-lockfile-upload
 after_success:
 - yarn global add codecov
 - codecov
-- npm run travis-deploy-once "npm run semantic-release"
 cache:
   yarn: true
 branches:
