chore: remove in-publish

--- a/package.json
+++ b/package.json
@@ -16,9 +16,7 @@
     "lint": "eslint .",
     "update-license": "licensor --width 72",
     "build-and-update-license": "npm run build && npm run update-license",
-    "preversion": "npm run travis && npm run update-license",
-    "prepublish": "not-in-install && npm run build-and-update-license || in-install",
-    "postpublish": "git push --follow-tags",
+    "prepublishOnly": "npm run build",
     "pretest": "npm run lint",
     "test": "jest",
     "pretravis": "npm run lint && npm run clean",
@@ -57,7 +55,6 @@
     "eslint_d": "^7.1.0",
     "html-webpack-plugin": "^3.0.4",
     "husky": "^0.14.3",
-    "in-publish": "^2.0.0",
     "jest": "^23.6.0",
     "jest-watch-typeahead": "^0.2.0",
     "licensor": "^4.0.0",
