--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     "eslint": "^5.6.0",
     "eslint-config-simenb-base": "^15.0.0",
     "eslint_d": "^7.1.0",
-    "html-webpack-plugin": "^3.0.4",
+    "html-webpack-plugin": "^4.0.0-0",
     "husky": "^0.14.3",
     "jest": "^23.6.0",
     "jest-watch-typeahead": "^0.2.0",
@@ -65,7 +65,7 @@
     "webpack-cli": "^3.1.0"
   },
   "peerDependencies": {
-    "html-webpack-plugin": "^3.0.4"
+    "html-webpack-plugin": "^3.0.4 || ^4.0.0-0"
   },
   "engines": {
     "node": ">=6"
