chore: put dll example in sub directory

--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
   ],
   "main": "lib/index.js",
   "scripts": {
-    "clean": "del-cli lib/ coverage/ example/build example/dist",
+    "clean": "del-cli lib/ coverage/ example/*/build example/*/dist",
     "build": "babel src/ --out-dir lib/",
     "cover": "jest --coverage",
     "preexample": "npm run clean && npm run build",
-    "example": "webpack --config example/webpack.config.dll.js && webpack --config example/webpack.config.js",
+    "example": "npm run example:dll",
+    "example:dll": "webpack --config example/dll/webpack.config.dll.js && webpack --config example/dll/webpack.config.js",
     "lint": "eslint .",
     "update-license": "licensor --width 72",
     "build-and-update-license": "npm run build && npm run update-license",
