feat: add `attributes` option
This allows developers to add custom attributes to the generated script
tags. Useful when injecting polyfill scripts and adding a `nomodule`
attribute to it.

--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
     "postbuild": "prettier lib/* --write",
     "cover": "jest --coverage",
     "preexample": "npm run clean && npm run build",
-    "example": "npm run example:dll",
+    "example": "npm run example:dll && npm run example:polyfill",
     "example:dll": "webpack --config example/dll/webpack.config.dll.js && webpack --config example/dll/webpack.config.js",
+    "example:polyfill": "webpack --config example/polyfill/webpack.config.js",
     "lint": "eslint .",
     "update-license": "licensor --width 72",
     "build-and-update-license": "npm run build && npm run update-license",
