--- a/package.json
+++ b/package.json
@@ -67,7 +67,8 @@
     "webpack-cli": "^3.1.0"
   },
   "peerDependencies": {
-    "html-webpack-plugin": "^3.0.4 || ^4.0.0-0"
+    "html-webpack-plugin": "^3.0.4 || ^4.0.0-0",
+    "webpack": "^4.0.0"
   },
   "engines": {
     "node": ">=6"
