fix: do not add trailing commas to compiled output
Fixes #147

--- a/package.json
+++ b/package.json
@@ -115,6 +115,12 @@
         "options": {
           "parser": "json"
         }
+      },
+      {
+        "files": "lib/**/*.js",
+        "options": {
+          "trailingComma": "es5"
+        }
       }
     ]
   },
