--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "example": "npm run example:dll && npm run example:polyfill",
     "example:dll": "webpack --config example/dll/webpack.config.dll.js && webpack --config example/dll/webpack.config.js",
     "example:polyfill": "webpack --config example/polyfill/webpack.config.js",
-    "lint": "eslint .",
+    "lint": "eslint --cache .",
     "update-license": "licensor --width 72",
     "build-and-update-license": "npm run build && npm run update-license",
     "prepublishOnly": "npm run build",
@@ -52,7 +52,7 @@
     "classnames": "^2.2.5",
     "del-cli": "^1.1.0",
     "eslint": "^5.6.0",
-    "eslint-config-simenb-base": "^15.0.0",
+    "eslint-config-simenb-base": "^15.0.1",
     "eslint_d": "^7.1.0",
     "html-webpack-plugin": "^4.0.0-0",
     "husky": "^1.0.1",
