--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "version": "0.0.0-development",
   "description": "Add a JS or CSS assets to a generated HTML file",
   "files": [
-    "lib/",
-    "index.d.ts"
+    "lib/"
   ],
   "main": "lib/index.js",
   "scripts": {
@@ -16,7 +15,7 @@
     "example": "npm run example:dll && npm run example:polyfill",
     "example:dll": "webpack --config example/dll/webpack.config.dll.js && webpack --config example/dll/webpack.config.js",
     "example:polyfill": "webpack --config example/polyfill/webpack.config.js",
-    "lint": "eslint --cache .",
+    "lint": "eslint --cache --ext js,ts .",
     "update-license": "licensor --width 72",
     "build-and-update-license": "npm run build && npm run update-license",
     "prepublishOnly": "npm run build",
@@ -47,12 +46,22 @@
     "@babel/core": "^7.0.1",
     "@babel/plugin-transform-modules-commonjs": "^7.0.0",
     "@babel/preset-env": "^7.0.0",
+    "@babel/preset-typescript": "^7.1.0",
+    "@types/globby": "^8.0.0",
+    "@types/html-webpack-plugin": "^3.2.0",
+    "@types/jest": "^23.3.13",
+    "@types/micromatch": "^3.1.0",
+    "@types/node": "^10.12.18",
+    "@types/p-each-series": "^1.0.0",
+    "@types/slash": "^2.0.0",
+    "@types/webpack": "^4.4.24",
     "babel-jest": "^24.0.0",
     "babel-plugin-add-module-exports": "^1.0.0",
     "classnames": "^2.2.5",
     "del-cli": "^1.1.0",
     "eslint": "^5.6.0",
     "eslint-config-simenb-base": "^15.0.1",
+    "eslint-config-simenb-typescript": "^1.0.0",
     "eslint_d": "^7.1.0",
     "html-webpack-plugin": "^4.0.0-0",
     "husky": "^1.0.1",
@@ -62,6 +71,7 @@
     "lint-staged": "^7.0.0",
     "prettier": "^1.8.2",
     "slash": "^2.0.0",
+    "typescript": "^3.2.4",
     "webpack": "^4.0.0",
     "webpack-cli": "^3.1.0"
   },
@@ -88,11 +98,11 @@
     ]
   },
   "lint-staged": {
-    "*.js": [
+    "*.{js,ts}": [
       "eslint --fix",
       "git add"
     ],
-    "*.{md,json,ts}": [
+    "*.{md,json}": [
       "prettier --write",
       "git add"
     ],
