--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "example": "npm run example:dll && npm run example:polyfill",
     "example:dll": "webpack --config example/dll/webpack.config.dll.js && webpack --config example/dll/webpack.config.js",
     "example:polyfill": "webpack --config example/polyfill/webpack.config.js",
+    "example:resourceHint": "webpack --config example/resourceHint/webpack.config.dll.js && webpack --config example/resourceHint/webpack.config.js",
     "lint": "eslint --cache .",
     "update-license": "licensor --width 72",
     "build-and-update-license": "npm run build && npm run update-license",
