--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -37,7 +37,7 @@ jobs:
           node-version: ${{ matrix.node-version }}
       - run: yarn
       - name: run tests
-        run: yarn travis
+        run: yarn cover
       - uses: codecov/codecov-action@v1
   test-os:
     name: Test on ${{ matrix.os }} using Node.js LTS
@@ -64,7 +64,28 @@ jobs:
           node-version: 14.x
       - run: yarn
       - name: run tests
-        run: yarn travis
+        run: yarn cover
+  lint:
+    name: Run ESLint using Node.js LTS
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v2
+      - name: Get yarn cache directory path
+        id: yarn-cache-dir-path
+        run: echo "::set-output name=dir::$(yarn cache dir)"
+      - uses: actions/cache@v2
+        id: yarn-cache
+        with:
+          path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
+          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-yarn-
+      - uses: actions/setup-node@v2.1.4
+        with:
+          node-version: 14.x
+      - run: yarn
+      - run: yarn lint
 
   release:
     if:
