--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -45,6 +45,7 @@ jobs:
       - name: run tests
         run: yarn cover
       - uses: codecov/codecov-action@v1
+        if: ${{ always() }}
   test-os:
     name: Test on ${{ matrix.os }} using Node.js LTS
     strategy:
