--- a/package.json
+++ b/package.json
@@ -88,7 +88,7 @@
   },
   "lint-staged": {
     "*.js": [
-      "eslint --fix",
+      "eslint --fix --cache",
       "git add"
     ],
     "*.{md,json,ts}": [
