--- a/.eslintrc
+++ b/.eslintrc
@@ -3,9 +3,12 @@
   "extends": "simenb-base",
   "overrides": [
     {
-      "files": "test.js",
+      "files": ["test.js", "puppeteer.test.js"],
       "env": {
         "jest": true
+      },
+      "rules": {
+        "no-console": "off"
       }
     },
     {
