--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -72,6 +72,30 @@ jobs:
       - run: yarn
       - name: run tests
         run: yarn cover
+  test-browser:
+    name: Test DLL example with Puppeteer
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v2
+      - name: Get yarn cache directory path
+        id: yarn-cache-dir-path
+        run: echo "::set-output name=dir::$(yarn cache dir)"
+      - uses: actions/cache@v2
+        id: yarn-cache
+        with:
+          path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
+          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-yarn-
+      - uses: actions/setup-node@v2.1.4
+        with:
+          node-version: 14.x
+        run: |
+          yarn
+          yarn add --dev puppeteer
+      - name: run tests
+        run: yarn jest
   lint:
     name: Run ESLint using Node.js LTS
     runs-on: ubuntu-latest
@@ -99,7 +123,7 @@ jobs:
       # prettier-ignore
       ${{ github.event_name == 'push' && github.event.ref == 'refs/heads/main' }}
     name: Release new version
-    needs: [lint, test-node, test-os]
+    needs: [lint, test-node, test-os, test-browser]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
