--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -91,9 +91,10 @@ jobs:
       - uses: actions/setup-node@v2.1.4
         with:
           node-version: 14.x
-        run: |
+      - name: install puppeteer
           yarn
           yarn add --dev puppeteer
+          git checkout yarn.lock
       - name: run tests
         run: yarn jest
   lint:
