--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -18,6 +18,15 @@ jobs:
       matrix:
         node-version: [6.x, 8.x, 10.x, 12.x, 14.x, 15.x]
         html-plugin-version: [3, 4]
+        include:
+          - node-version: 10.x
+            install-puppeteer: true
+          - node-version: 12.x
+            install-puppeteer: true
+          - node-version: 14.x
+            install-puppeteer: true
+          - node-version: 15.x
+            install-puppeteer: true
     runs-on: ubuntu-latest
 
     steps:
@@ -42,6 +51,12 @@ jobs:
         run: |
           yarn
           yarn add --dev html-webpack-plugin@${{matrix.html-plugin-version }}
+          git checkout yarn.lock
+      - name: install puppeteer
+        if: ${{ matrix.install-puppeteer }}
+        run: |
+          yarn add --dev puppeteer
+          git checkout yarn.lock
       - name: run tests
         run: yarn cover
       - uses: codecov/codecov-action@v1
@@ -72,34 +87,6 @@ jobs:
       - run: yarn
       - name: run tests
         run: yarn cover
-  test-browser:
-    name: Test DLL example with Puppeteer
-    runs-on: ubuntu-latest
-
-    steps:
-      - uses: actions/checkout@v2
-      - name: Get yarn cache directory path
-        id: yarn-cache-dir-path
-        run: echo "::set-output name=dir::$(yarn cache dir)"
-      - uses: actions/cache@v2
-        id: yarn-cache
-        with:
-          path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
-          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-yarn-
-      - uses: actions/setup-node@v2.1.4
-        with:
-          node-version: 14.x
-      - name: install puppeteer
-        run: |
-          yarn
-          yarn add --dev puppeteer
-          git checkout yarn.lock
-      - name: run examples
-        run: yarn example
-      - name: run tests
-        run: yarn jest
   lint:
     name: Run ESLint using Node.js LTS
     runs-on: ubuntu-latest
@@ -127,7 +114,7 @@ jobs:
       # prettier-ignore
       ${{ github.event_name == 'push' && github.event.ref == 'refs/heads/main' }}
     name: Release new version
-    needs: [lint, test-node, test-os, test-browser]
+    needs: [lint, test-node, test-os]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
