--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -56,6 +56,7 @@ jobs:
         if: ${{ matrix.install-puppeteer }}
         run: |
           yarn add --dev puppeteer
+          yarn example
           git checkout yarn.lock
       - name: run tests
         run: yarn cover
