--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -12,12 +12,13 @@ jobs:
   test-node:
     name:
       # prettier-ignore
-      Test on Node.js v${{ matrix.node-version }} and html-webpack-plugin v${{ matrix.html-plugin-version }}
+      Test on Node.js v${{ matrix.node-version }} and html-webpack-plugin v${{ matrix.html-plugin-version }} and webpack v${{ matrix.webpack-version }}
     strategy:
       fail-fast: false
       matrix:
         node-version: [6.x, 8.x, 10.x, 12.x, 14.x, 15.x]
         html-plugin-version: [3, 4]
+        webpack-version: [4]
         include:
           - node-version: 10.x
             install-puppeteer: true
@@ -47,11 +48,13 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: ${{ matrix.node-version }}
-      - name: install with html-webpack-plugin v${{matrix.html-plugin-version }}
+      # prettier-ignore
+      - name: install with html-webpack-plugin v${{matrix.html-plugin-version }} and webpack v${{ matrix.webpack-version }}
         run: |
           yarn
-          yarn add --dev html-webpack-plugin@${{matrix.html-plugin-version }}
+          yarn add --dev html-webpack-plugin@${{matrix.html-plugin-version }} webpack@${{ matrix.webpack-version }}
           git checkout yarn.lock
+
       - name: install puppeteer
         if: ${{ matrix.install-puppeteer }}
         run: |
